--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <h2>Все что вы хотите знать</h2>
     <section class="services">
         <img class ="broccoli-img" src="assets/img/broccoli_img.png" alt="broccoli">
-        </div>
         <div class="container-questions">
             <div class="question">
                 <div class="icon-circle_plus">
@@ -38,7 +37,7 @@
                         <p class="detailed-information">При заказе до 17:00 доставка осуществляется <b>в день заказа     </b>. Среднее время доставки 2 часа. Доставка осуществляется 
                         до 20:00 ежедневно. Мы работаем без выходных и праздников, чтобы Вы всегда могли
                         кушать вкусную и здоровую еду!</p>
-                        <p class="detailed-information">Доставка осуществляется <b>бесплатно</b> при заказе от 1500 руб. 
+                        <p class="detailed-information col">Доставка осуществляется <b>бесплатно</b> при заказе от 1500 руб. 
                          по г.Москва в пределах МКАД</p>
                     </div>
                 </details>
@@ -85,7 +84,6 @@
             </div>
         </div>
     </section>
-        </div>
     <script src="JS/main.js"></script>
 </body>
 </html>
